# SE_PRAC2_2

./: CMakeLists.txt  README (2).md  README.md
include/: command.h  compiler.h  exec.h
lib/stack/: CMakeLists.txt
lib/stack/include/: stack.h  stack_list.h
lib/stack/test/: main.cpp
programs/: fact.txt  fib.txt  rfact.txt
src/: compiler.cpp  emu.cpp  emu_comp.cpp  emu_exec.cpp  exec.cpp
